--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: 'The channel ID to send the message to'
     required: true
     default: ''
+  timestamp:
+    description: 'The timestamp of the previous message'
+    required: false
+    default: ''
 outputs:
   timestamp:
     description: 'The timestamp at which the message was posted. This is used to update or to reply to a message in thread'
@@ -26,6 +30,7 @@ runs:
     - --token=${{ inputs.token }}
     - --message=${{ inputs.message }}
     - --channel=${{ inputs.channel }}
+    - --timestamp=${{ inputs.timestamp }}
 branding:
   icon: "arrow-right-circle"
   color: purple
